--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         />
         <input
             id="input"
-            type="number"
-            placeholder=" Enter number to search Pokemon"
+            type="text"
+            placeholder=" Enter numbers separated with ',' to search Pokemons"
         />
-        <button id="button" type="button">Get Pokemon</button>
+        <button id="button" type="button">Get Pokemons</button>
         <div id="root"></div>
         <script type="module" src="./src/init.js"></script>
     </body>
